# Aquabot_TotallySpies

./: .gitignore  =1.22  README.md  dependencies.txt  frames_2024-11-21_10.24.55.gv  infos  poses_data.txt  robot_pose.txt  rviz_config.rviz
install/: local_setup.sh  setup.sh
install/lib/aquabot_example/: aquabot_node
install/lib/aquabot_python/: generate_scenario.py  qrcode_generator.py  regenerate_scenario_file.py  reopen_scenario.py  teleop_keyboard.py
install/lib/opencv_example/: minimal_opencv_ros2_node
install/lib/package_example/: example_node_cpp
install/share/aquabot_description/: local_setup.sh  package.sh
install/share/aquabot_description/cmake/: aquabot_descriptionConfig.cmake
install/share/aquabot_description/environment/: resource_paths.dsv
install/share/aquabot_example/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/aquabot_gz/: package.sh
install/share/aquabot_gz/environment/: resource_paths.dsv
install/share/aquabot_gz/launch/: competition.launch.py
install/share/aquabot_gz/worlds/: aquabot_patrolandfollow_easy.sdf  aquabot_patrolandfollow_hard.sdf  aquabot_patrolandfollow_medium.sdf  aquabot_regatta.sdf  aquabot_windturbines_easy.sdf  aquabot_windturbines_hard.sdf
install/share/aquabot_python/: local_setup.sh  package.sh
install/share/navigation/: package.dsv  package.ps1  package.sh
install/share/opencv_example/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/opencv_example/cmake/: opencv_exampleConfig.cmake
install/share/package_example/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
install/share/vrx_gazebo/: package.sh
install/share/vrx_gz/: local_setup.sh  package.sh
install/share/vrx_gz/environment/: resource_paths.dsv
install/share/vrx_ros/: local_setup.sh  package.sh
install/share/wamv_description/: local_setup.sh  package.sh
install/share/wamv_gazebo/: package.sh
log/: latest_build
src/Aquabot/: README.md
src/Aquabot-Competitor/: README.md
src/Aquabot/aquabot_gz/: CMakeLists.txt
src/Aquabot/aquabot_gz/config/: rviz_aquabot.rviz
src/Aquabot/aquabot_gz/launch/: competition.launch.py  rviz.launch.py
src/Aquabot/aquabot_gz/src/: PatrolAndFollowScoringPlugin.hh  WindturbinesInspectionScoringPlugin.cc  WindturbinesInspectionScoringPlugin.hh
src/Aquabot/aquabot_gz/worlds/: aquabot_regatta.sdf  aquabot_windturbines_competition_00.sdf  aquabot_windturbines_competition_01.sdf  aquabot_windturbines_competition_02.sdf  aquabot_windturbines_competition_03.sdf  aquabot_windturbines_competition_04.sdf  aquabot_windturbines_competition_05.sdf  aquabot_windturbines_competition_06.sdf  aquabot_windturbines_competition_07.sdf  aquabot_windturbines_competition_08.sdf  aquabot_windturbines_competition_09.sdf  aquabot_windturbines_medium.sdf
src/Aquabot/aquabot_python/: CMakeLists.txt  package.xml
src/Aquabot/aquabot_python/scripts/: aquabot_windturbines_competition_00.sdf  generate_competition_worlds.py  plot_log_file.py
src/angle_pos/: package.xml  setup.cfg  setup.py
src/angle_pos/angle_pos/: angle_pos_node.py
src/array2stamp/: CMakeLists.txt  package.xml
src/array2stamp/src/: array2stamp.cpp  array2stamp.h  array2stapm.h
src/control_cam/: README.md  package.xml  setup.cfg  setup.py
src/control_cam/control_cam/: control_cam_node qui fonctionne avec orientation de la cam pour trouver QR code.py  control_cam_node.py  control_cam_node_essaye_aligne_cam_vers_qrcode (pas fini)  control_cam_node_oriente_OK_cam_vers_pt_gps  control_cam_test_180deg.py
src/control_cam_qr/: README.md  package.xml  setup.cfg  setup.py
src/control_cam_qr/control_cam_qr/: control_cam_qr_node.py
src/map_modifier/: README.md  package.xml  setup.cfg  setup.py
src/map_modifier/map_modifier/: map_modifier.py
src/mission/: CMakeLists.txt  README.md  package.xml
src/mission/launch/: sensors_nav.launch.py
src/mission/src/: mission.py  mission_utils.py
src/mission_aqua/: README.md  package.xml  setup.cfg  setup.py
src/mission_aqua/launch/: controller_wt_cam.launch.py  nav_localization.launch.py
src/mission_aqua/mission_aqua/: README.md  mission_aqua.py  mission_aqua_utils.py
src/nav2aqua/: CMakeLists.txt  README.md  package.xml
src/nav2aqua/config/: map_300.pgm  map_400.pgm  map_400.yaml  map_400_2_bw.pgm  map_400_test.yaml  map_server_params.yaml  nav2_params.yaml
src/nav2aqua/launch/: nav2aqua.launch.py
src/nav2aqua/src/: nav2aqua.cpp  nav2aqua.h
src/navigation/: CMakeLists.txt  README.md  package.xml
src/navigation/launch/: manual_nav.launch.py
src/navigation/src/: aqua_utils.cpp  aqua_utils.h  graph_node.cpp  graph_node.h  mtr_control.cpp  mtr_control.h  navigation.cpp  navigation.h
src/py_control/: README.md  package.xml  setup.cfg  setup.py
src/py_control/mppi_control_tests/: opti2.py  test_circle.py  test_dyn.py  test_mppi_aquabot.py  test_mppi_circle.py  test_opti.py  test_py_sim.py  test_smc.py  test_wind.py
src/py_control/py_control/: mppi_compiled.py  mppi_pythran_normal.py  mppi_utils.py  py_control.py  py_control_path_test.py  test_pythran.py
src/py_control/py_control/__pycache__/: mppi_utils._g-205.py310.1.nbc  mppi_utils._g-205.py310.nbi  mppi_utils.boucle-229.py310.1.nbc  mppi_utils.boucle-229.py310.2.nbc  mppi_utils.boucle-229.py310.nbi  mppi_utils.compute_lateral_error-253.py310.1.nbc  mppi_utils.compute_lateral_error-253.py310.nbi  mppi_utils.dynamics-117.py310.1.nbc  (+4 more)
src/py_qr/: README.md  package.xml  setup.cfg  setup.py
src/py_qr/py_qr/: opencv_decoder_node basique qui fonctionne pour une eolinne.py  opencv_decoder_node.py
src/robot_localization/: README.md
src/robot_localization/launch/: aquabot_ekfs.launch.py
src/robot_localization/params/: aquabot_ekfs.yaml
src/sensors_processing/: CMakeLists.txt  README.md  package.xml
src/sensors_processing/launch/: rviz_config.rviz  sensors_processing.launch.py
src/sensors_processing/src/: sensors_processing.cpp  sensors_processing.h
src/wind_estimator/: setup.cfg  setup.py
src/wind_estimator/wind_estimator/: wind_estimator_node.py
(+19 files in other folders)
