<?xml version="1.0"?>
<package format="3">
  <name>control_cam_qr</name>
  <version>0.1.0</version>
  <description>Package ROS 2 combinant le contrôle de la caméra et le décodage des QR codes</description>

  <maintainer email="maelys.cormont@ensta-bretagne.org">maelys</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dépendances pour un package Python -->
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
</package>

